Cleaned up code and added some checks.